%%{init: {
  "theme": "base",
  "themeVariables": {
    "background": "#ffffff",
    "fontFamily": "arial, helvetica, sans-serif",
    "fontSize": "13px",
    "primaryColor": "#E9F6F3",
    "primaryTextColor": "#13322F",
    "primaryBorderColor": "#0F766E",
    "lineColor": "#0D9488"
  },
  "er": { "entityPadding": 26, "minEntityWidth": 140, "useMaxWidth": false }
}}%%
erDiagram
    USER ||--o| PATIENT : "1:1"
    USER ||--o| THERAPIST : "1:1"
    PATIENT }o--o| THERAPIST : "assigned to"

    THERAPIST ||--o{ SERVICE : offers
    PATIENT ||--o{ APPOINTMENT : books
    THERAPIST ||--o{ APPOINTMENT : hosts
    SERVICE ||--o{ APPOINTMENT : "booked for"

    PATIENT ||--o{ MESSAGE : "chat with"
    THERAPIST ||--o{ MESSAGE : "chat with"

    PATIENT ||--o{ RECORD : owns
    RECORD ||--o{ RECORD_CHUNK : "vector index (RAG)"

    PATIENT ||--o{ AI_MESSAGE : "Benzi AI chat"
    PATIENT ||--o{ AI_MOOD_LOG : "daily mood"
    PATIENT ||--o{ AI_GOAL : goals

    THERAPIST ||--o| THERAPIST_SUBSCRIPTION : subscribes
    SUBSCRIPTION_PLAN ||--o{ THERAPIST_SUBSCRIPTION : "plan"

    USER {
        ObjectId _id PK
        string email UK
        enum role
    }
    PATIENT {
        ObjectId _id PK
        ObjectId userId FK
        ObjectId assignedTherapistUserId FK
    }
    THERAPIST {
        ObjectId _id PK
        ObjectId userId FK
        enum verificationStatus
    }
    SERVICE {
        ObjectId _id PK
        ObjectId therapistUserId FK
        number pricePerSession
    }
    APPOINTMENT {
        ObjectId _id PK
        ObjectId patientUserId FK
        ObjectId therapistUserId FK
        datetime date
        enum status
    }
    MESSAGE {
        ObjectId _id PK
        ObjectId senderUserId FK
        string type
    }
    RECORD {
        ObjectId _id PK
        ObjectId patientUserId FK
        string fileUrl
    }
    RECORD_CHUNK {
        ObjectId _id PK
        ObjectId recordId FK
        array embedding
    }
    AI_MESSAGE {
        ObjectId _id PK
        ObjectId patientUserId FK
        enum sender
    }
    AI_MOOD_LOG {
        ObjectId _id PK
        ObjectId patientUserId FK
        date date
    }
    AI_GOAL {
        ObjectId _id PK
        ObjectId patientUserId FK
        enum status
    }
    THERAPIST_SUBSCRIPTION {
        ObjectId _id PK
        ObjectId therapistUserId FK
        enum status
    }
    SUBSCRIPTION_PLAN {
        ObjectId _id PK
        string slug UK
        number priceMonthlyCents
    }
